--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/TASTY-TREATS/",
+    "build": "vite build --base=/js_84_Michael-Zhinchyn/",
     "preview": "vite preview"
   },
   "devDependencies": {
